// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scale Slider Component render() when the value is set should successfully render the slider 1`] = `
<div>
  <div
    className="slider slider--horizontal"
  >
    <span
      className="slider__label"
    >
      Test Slider
      40
    </span>
    <Slider
      onChange={[Function]}
      orientation="horizontal"
      value={40}
    />
  </div>
</div>
`;

exports[`Scale Slider Component render() when the value is undefined should successfully render the slider 1`] = `
<div>
  <div
    className="slider slider--horizontal"
  >
    <span
      className="slider__label"
    >
      Test Slider
    </span>
    <Slider
      onChange={[Function]}
      orientation="horizontal"
    />
  </div>
</div>
`;
